src/objects/Corporate_Dashboard_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Corporate Dashboard Settings</label>
    <fields>
        <fullName>Emails__c</fullName>
        <label>Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_Expected_Buffer_Target__c</fullName>
        <label>EV Expected Buffer Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Target__c</fullName>
        <label>EV Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_year_End__c</fullName>
        <label>Fiscal year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Start__c</fullName>
        <label>Fiscal Year Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Graphs_number_of_months__c</fullName>
        <label>GS Graphs number of months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICDS_Number_of_months__c</fullName>
        <label>ICDS Number of months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Won_Target__c</fullName>
        <label>Opp Won Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance_graphs_number_of_months__c</fullName>
        <label>Performance graphs number of months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scale_graphs_number_of_months__c</fullName>
        <label>Scale graphs number of months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>